--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   cloud_firestore: ^2.5.3
   firebase_core: ^1.7.0
+  shared_preferences: ^2.0.5
 
 dev_dependencies:
   flutter_test:
